WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171324
Fix typo in RenderFrameBase
https://bugs.webkit.org/show_bug.cgi?id=171324
Summary
Fix typo in RenderFrameBase
Frédéric Wang Nélar
Reported
2017-04-26 08:40:13 PDT
s/peformLayoutWithFlattening/performLayoutWithFlattening/
Attachments
Patch
(2.31 KB, patch)
2017-04-26 08:41 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2017-04-26 08:41:28 PDT
Created
attachment 308251
[details]
Patch
WebKit Commit Bot
Comment 2
2017-04-26 09:54:21 PDT
Comment on
attachment 308251
[details]
Patch Clearing flags on attachment: 308251 Committed
r215806
: <
http://trac.webkit.org/changeset/215806
>
WebKit Commit Bot
Comment 3
2017-04-26 09:54:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug