Fix typo in RenderFrameBase https://bugs.webkit.org/show_bug.cgi?id=171324

Patch by Frederic Wang <fwang@igalia.com> on 2017-04-26
Reviewed by Zalan Bujtas.

No new tests, behavior unchanged.

* rendering/RenderFrameBase.cpp:
(WebCore::RenderFrameBase::layoutWithFlattening):
(WebCore::RenderFrameBase::performLayoutWithFlattening):
(WebCore::RenderFrameBase::peformLayoutWithFlattening): Deleted.
* rendering/RenderFrameBase.h:

Canonical link: https://commits.webkit.org/188208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215806 268f45cc-cd09-0410-ab3c-d52691b4dbfc